# Club.Api/Features/Admin/Voucher/Update/AdminVoucherUpdateRequest.cs
@@ -1,0 +1,8 @@
+using Club.Features.Admin.Voucher.Create;
+
+namespace Club.Features.Admin.Voucher.Update;
+
+public class AdminVoucherUpdateRequest : AdminVoucherCreateRequest
+{
+    public int Id { get; set; }
+}
